--- a/06-spring-grpc/pom.xml
+++ b/06-spring-grpc/pom.xml
@@ -3,19 +3,32 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.4.1</version>
+		<relativePath/>
+		<!-- lookup parent from repository -->
+	</parent>
 	<groupId>de.thi.inf.sesa</groupId>
-	<artifactId>grpc-simple-example</artifactId>
+	<artifactId>grpc-service-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>grpc-simple-example</name>
-	<description>Demo project for plain gRPC</description>
+	<name>grpc-service-example</name>
+	<description>Demo project for Spring Boot with gRPC</description>
 
 	<properties>
-		<protobuf.version>3.14.0</protobuf.version>
+		<java.version>21</java.version>
+		<protobuf.version>3.25.5</protobuf.version>
 		<protobuf-plugin.version>0.6.1</protobuf-plugin.version>
-		<grpc.version>1.35.0</grpc.version>
+		<grpc.version>1.68.1</grpc.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
@@ -27,21 +40,15 @@
             <version>${grpc.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.grpc</groupId>
-            <artifactId>grpc-services</artifactId>
-            <version>${grpc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.grpc</groupId>
-            <artifactId>grpc-netty</artifactId>
-            <version>${grpc.version}</version>
-        </dependency>
-        <dependency>
-            <!-- Java 9+ compatibility - Do NOT update to 2.0.0 -->
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>1.3.5</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <!-- Required for generated gRPC code which still uses javax.annotation.Generated -->
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
 	</dependencies>
 
@@ -62,8 +69,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>
+						<arg>-Xlint:-options</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
             <plugin>
