--- a/17-microservice-example-docker/docker-compose.yml
+++ b/17-microservice-example-docker/docker-compose.yml
@@ -1,6 +1,17 @@
-version: '3.8'
-
 services:
+  # Nginx reverse proxy
+  nginx:
+    image: nginx:alpine
+    container_name: microservices-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - auth
+      - posts
+      - frontend
   # MongoDB for auth service
   mongodb:
     image: mongo:latest
@@ -12,6 +23,54 @@ services:
       - mongodb-data:/data/db
     environment:
       MONGO_INITDB_DATABASE: auth
+  
+  # Authentification service in auth/
+  auth:
+    restart: unless-stopped
+    build:
+      context: auth/
+    environment:
+      - "MONGO_DB_URL=mongodb://mongodb:27017/auth"
+      - "JWT_SECRET=${SECRET:-dev-secret-change-in-production}"
+    depends_on:
+      - mongodb
+  
+  # Database for posts service
+  mysqldb:
+    image: mysql:9
+    volumes:
+      - mysql-data:/var/lib/mysql
+    environment:
+      - "MYSQL_USER=${MYSQL_USER:-posts_user}"
+      - "MYSQL_PASSWORD=${MYSQL_PASSWORD:-posts_password}"
+      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}"
+      - "MYSQL_DATABASE=${MYSQL_DATABASE:-posts_db}"
+
+  # Post service in posts/
+  posts:
+    restart: unless-stopped
+    build:
+      context: posts/
+    environment:
+      - "SPRING_JPA_HIBERNATE_DDL_AUTO=update"
+      - "SPRING_DATASOURCE_URL=jdbc:mysql://mysqldb:3306/${MYSQL_DATABASE:-posts_db}"
+      - "SPRING_DATASOURCE_USERNAME=${MYSQL_USER:-posts_user}"
+      - "SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD:-posts_password}"
+      - "SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.jdbc.Driver"
+      - "MQTT_BROKER=tcp://mosquitto:1883"
+      - "JWT_SECRET=${SECRET:-dev-secret-change-in-production}"
+    depends_on:
+      - mysqldb
+      - mosquitto
+
+  # Simple frontend from frontend/
+  frontend:
+    restart: unless-stopped
+    build:
+      context: frontend/
+    configs:
+      - source: frontend-config
+        target: /usr/share/nginx/html/js/config.js
 
   # Mosquitto MQTT broker for posts service
   mosquitto:
@@ -26,7 +85,14 @@ services:
       - mosquitto-log:/mosquitto/log
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
 
+configs:
+  frontend-config:
+    content: |
+      const AUTH_API_BASE = 'http://localhost/auth';
+      const POSTS_API_BASE = 'http://localhost/posts';
+
 volumes:
   mongodb-data:
   mosquitto-data:
   mosquitto-log:
+  mysql-data:
