--- a/17-microservice-example-docker/docker-compose.swarm.yml
+++ b/17-microservice-example-docker/docker-compose.swarm.yml
@@ -3,22 +3,19 @@ services:
   nginx:
     image: nginx:alpine
     container_name: microservices-nginx
-    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - auth
-      - posts
-      - frontend
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
   # MongoDB for auth service
   mongodb:
     image: mongo:latest
     container_name: microservices-mongodb
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
     volumes:
       - mongodb-data:/data/db
     environment:
@@ -29,6 +26,11 @@ services:
       timeout: 5s
       retries: 5
       start_period: 20s
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
   
   # Authentification service in auth/
   auth:
@@ -37,9 +39,11 @@ services:
     environment:
       - "MONGO_DB_URL=mongodb://mongodb:27017/auth"
       - "JWT_SECRET=${SECRET:-dev-secret-change-in-production}"
-    depends_on:
-      mongodb:
-        condition: service_healthy
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
     healthcheck:
       test: ["CMD-SHELL", "wget -O /dev/null -q http://localhost:3001/health || exit 1"]
       interval: 10s
@@ -63,10 +67,14 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
 
   # Post service in posts/
   posts:
-    restart: unless-stopped
     image: case-projects.rz.fh-ingolstadt.de/cnd-sebastian-apel/posts
     environment:
       - "SPRING_JPA_HIBERNATE_DDL_AUTO=update"
@@ -76,31 +84,34 @@ services:
       - "SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.jdbc.Driver"
       - "MQTT_BROKER=tcp://mosquitto:1883"
       - "JWT_SECRET=${SECRET:-dev-secret-change-in-production}"
-    depends_on:
-      mysqldb:
-        condition: service_healthy
-      mosquitto:
-        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "wget -O /dev/null -q http://localhost:8080/actuator/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 60s
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
 
   # Simple frontend from frontend/
   frontend:
-    restart: unless-stopped
     image: case-projects.rz.fh-ingolstadt.de/cnd-sebastian-apel/frontend
     configs:
       - source: frontend-config
         target: /usr/share/nginx/html/js/config.js
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
 
   # Mosquitto MQTT broker for posts service
   mosquitto:
     image: eclipse-mosquitto
     container_name: microservices-mosquitto
-    restart: unless-stopped
     volumes:
       - mosquitto-data:/mosquitto/data
       - mosquitto-log:/mosquitto/log
@@ -111,6 +122,11 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
 
 configs:
   frontend-config:
