--- a/22-ingress/k8s/example.yml
+++ b/22-ingress/k8s/example.yml
@@ -57,22 +57,20 @@ spec:
       targetPort: 3000
       nodePort: 30080
 ---
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-    name: demo-hpa
-    namespace: default
+    name: demo-ingress
 spec:
-    scaleTargetRef:
-        apiVersion: apps/v1
-        kind: Deployment
-        name: demo
-    minReplicas: 1
-    maxReplicas: 10
-    metrics:
-      - type: Resource
-        resource:
-          name: memory
-          target:
-            type: Utilization
-            averageUtilization: 70  # Bei 70% von 64Mi request = ~45Mi
+  ingressClassName: nginx
+  rules:
+    - host: localhost
+      http:
+        paths:
+          - path: /hello
+            pathType: Prefix
+            backend:
+              service:
+                name: demo
+                port:
+                  number: 3000
