--- a/23-microservice-example-kubernetes/mosquitto.conf
+++ b/23-microservice-example-kubernetes/mosquitto.conf
@@ -1,5 +1,4 @@
 listener 1883
 allow_anonymous true
-persistence true
-persistence_location /mosquitto/data/
-log_dest file /mosquitto/log/mosquitto.log
+persistence false
+log_dest stdout
